Actualizar .gitignore con patrones de Windows

--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,11 @@ backend/app/models/Mistral-7B-v0.1/
 .DS_Store
 .idea/
 .vscode/
-ViralTikAI/
+
+
+/
+# Windows files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
